# osc3-mcp-rust

./: CLAUDE.md  Cargo.toml  README.md  config.example.json
.github/workflows/: rust.yml
bak/mcp/: mcp_server.rs
src/: chat_ui.rs  editor.rs  knob.rs  lib.rs  main.rs  mcp_server.rs  params.rs  tab_switcher.rs
src/ai/: bridge.rs  chat_ui.rs  llm.rs  mcp.rs  mod.rs  preset.rs  tools.rs
src/assets/: knob.css
src/dsp/: envelope.rs  filter.rs  mod.rs  oscillator.rs  voice.rs
src/ui/: editor.rs  knob.rs  meter.rs  mod.rs  tab_switcher.rs
templates/: release_template.md
xtask/: Cargo.toml
