[package]
name = "osc3-mcp-rust"
version = "0.1.16"
edition = "2024"
license = "MIT"
description = "A cool synthesizer plugin built with Rust"
readme = "README.md"

[workspace]
members = ["xtask"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
vizia_plug = { git = "https://github.com/vizia/vizia-plug.git", branch = "main"}

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[target.'cfg(windows)'.wants]
windows_subsystem = "windows"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
